[package]
name = "disca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
dashmap = "5.5.3"
either = "1.9.0"
futures = "0.3.29"
libp2p = { version = "0.52.4", features = ["tokio", "cbor", "kad", "macros", "request-response", "quic", "identify"] }
sccache = "0.5.4"
serde = { version = "1", features = ["derive"] }
tokio = "1"
void = "1.0.2"
